Afegit comentari sobre plans pel futur: Utilitzar \varpi per les projeccions?

--- a/NovoTeX/FrontMatter/LletresGregues.tex
+++ b/NovoTeX/FrontMatter/LletresGregues.tex
@@ -25,7 +25,7 @@
 		Nu & \(\nu\) & \\
 		Ksi & \(\xi\) & \(\Xi\) \\
 		Òmicron & \(\omicron\) & \(\Omicron\) \\
-		Pi & \(\pi\) \(\varpi\) & \(\Pi\) \\
+		Pi & \(\pi\) \(\varpi\) & \(\Pi\) \\ %TODO \varpi per projeccions (?)
 		Rho & \(\rho\) \(\varrho\) & \\
 		Sigma & \(\sigma\) \(\varsigma\) & \(\Sigma\) \\
 		Tau & \(\tau\) & \\
