--- a/parts/Probabilitat.tex
+++ b/parts/Probabilitat.tex
@@ -709,7 +709,7 @@
 		Sigui~\(X\) una variable aleatòria tal que existeix una funció~\(f\colon\RR\longleftarrow\RR\) satisfent
 		\begin{enumerate}
 			\item Per a tot~\(x\in\RR\) tenim que~\(f(x)\geq0\).
-			\item La funció~\(f\) és integrable sobre tot~\(RR\).
+			\item La funció~\(f\) és integrable sobre tot~\(\RR\).
 			\item \(\int_{-\infty}^{\infty}f(x)dx=1\).
 			\item Per a tot~\(a\),~\(b\in\RR\cup\{\pm\infty\}\) tenim que
 			\[\Probabilitat\{a\leq X\leq b\}=\int_{a}^{b}f(x)dx.\]
